--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -10,6 +10,7 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
+    - nvm_node_version: "13.8.0"
 
   pre_tasks:
     - name: "wait 300 seconds for target connection to become reachable/usable."
@@ -32,5 +33,6 @@
     - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"  
 
   roles:
+    - ansible-nvm-node
     - configure-server
     - configure-prometheus-node-exporter
