--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -7,12 +7,18 @@
 - name: check node version and print it to console
   command: node -v
   register: node_version
-  msg: "node version is {{ node_version.stdout }}"
+  
+- name: print node version
+  debug:
+    msg: "node version is {{ node_version.stdout }}"
 
 - name: check npm version and print it to console
   command: npm -v
   register: npm_version
-  msg: "npm version is {{ npm_version.stdout }}"
+
+- name: print node version
+  debug:
+    msg: "npm version is {{ npm_version.stdout }}"
 
 - name: install pm2
   npm:
