--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,9 +1,13 @@
-- name: upgrade and update packages
-  apt:
-    update_cache: yes
-    upgrade: yes
+- name: upgrade and  update packages
+  apt: 
+   update_cache: yes
 
+- name: install node package
+  apt: 
+    name: "{{ item }}"
+    state: present
+  with_items:
+      - nodejs
+      - npm
 - name: install pm2
-  npm:
-    name: pm2
-    global: yes
+  command: npm install pm2 -g
