--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -21,7 +21,7 @@
 - name: install ans start app
   command:  pm2 start main.js
   args:
-    chdir: ~/backend/dist
+    chdir: ~/backend/backend/dist
   environment:
       ENVIRONMENT: production
       TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
