--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -16,7 +16,7 @@
 - name: "install node dependencies"
   command: npm i 
   args:
-    chdir: ~/backend
+    chdir: ~/backend/backend
 
 - name: install ans start app
   command:  pm2 start main.js
