--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,8 +288,8 @@ jobs:
             aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters "Name=tag:project,Values=udapeople" \
-            --output text >> .cimg/ansible/inventory.txt 
-            cat .cimg/ansible/inventory.txt
+            --output text >> .circleci/ansible/inventory.txt 
+            cat .circleci/ansible/inventory.txt
       
       - run:
           name: install dependencies for the backend
