--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -282,7 +282,7 @@ jobs:
   
   deploy-backend:
     docker:
-      - image: cimg/base:latest
+      - image: cimg/base:current
     steps:
       - checkout
       - add_ssh_keys:
@@ -370,7 +370,7 @@ jobs:
 
   notify_on_success:
     docker:
-      - image: cimg/base:latest
+      - image: cimg/base:current
     steps:
       - slack/notify:
           event: pass
