--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,10 @@ commands:
       - run:
           name: Install Ansible
           command: |
-            sudo apt-get update
-            sudo apt-get install software-properties-common -y
-            sudo apt-add-repository --yes --update ppa:ansible/ansible
-            sudo apt-get install ansible -y
+            sudo apt update
+            sudo apt install software-properties-common -y
+            sudo add-apt-repository --yes --update ppa:ansible/ansible  
+            sudo apt install ansible
   install_nodejs:
     steps:
       - run:
