--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -39,3 +39,8 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
+  EIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+      InstanceId: !Ref EC2Instance
