--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -371,6 +371,14 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Save the old stack id
+          command: |
+            export OldWorkflowID=$(aws cloudformation \
+                    list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                    --no-paginate --output text)
+            echo "Old Workflow ID= ${OldWorkflowID}"
+            curl https://kvdb.io/UieMt2AAJFwXs3CFpSvbva/old_workflow_id -d "${OldWorkflowID}"
+      - run:
           name: update cloudfront
           command: |
             aws cloudformation deploy \
@@ -390,16 +398,12 @@ jobs:
       - checkout
       - run:
           name: Get the Old stack id
-          command: |
-            export OldWorkflowID=$(aws cloudformation \
-                    list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                    --no-paginate --output text| cut -d '-' -f 2)
-            echo OldWorkflowID: "${OldWorkflowID}"
-            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-            # Fetch the stack names          
+          command: |        
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                     --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
             echo Stack names: "${STACKS[@]}"
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/UieMt2AAJFwXs3CFpSvbva/old_workflow_id)
+            echo "Old Workflow ID= ${OldWorkflowID}"
       - run:
           name: Delete the old stack
           command: |
