Finalizing the stages and everything should work perfectly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -399,8 +399,8 @@ jobs:
       - run:
           name: Get the Old stack id
           command: |        
-            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                    --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+            export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                    --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
             echo Stack names: "${STACKS[@]}"
             export OldWorkflowID=$(curl --insecure https://kvdb.io/UieMt2AAJFwXs3CFpSvbva/old_workflow_id)
             echo "Old Workflow ID= ${OldWorkflowID}"
