Finalizing the stages and everything should work perfectly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,12 @@ commands:
       - run:
           name: Install Ansible
           command: |
-            sudo apt update
+            sudo apt update -y
             sudo apt install software-properties-common -y
-            sudo add-apt-repository --yes --update ppa:ansible/ansible  
-            sudo apt install ansible
+            sudo add-apt-repository --yes --update ppa:ansible/ansible -y
+            sudo apt update -y
+            sudo apt-get update -y
+            sudo apt install ansible -y
   install_nodejs:
     steps:
       - run:
