--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -409,11 +409,12 @@ jobs:
       - run:
           name: Delete the old stack
           command: |
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OldWorkflowID}" ]]
             then
-              #aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
+            aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
+            aws s3 rm s3://udapeople-${OldWorkflowID} --recursive
+            aws s3 rb s3://udapeople-${OldWorkflowID} --force
             else 
                 echo "No old stack to delete"
             fi
