fixing the cleanup stage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -410,6 +410,7 @@ jobs:
       - run:
           name: Delete the old stack
           command: |
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/UieMt2AAJFwXs3CFpSvbva/old_workflow_id)
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OldWorkflowID}" ]]
             then
             aws s3 rm s3://udapeople-${OldWorkflowID} --recursive
