--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
 TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
 # Use these values for the local PG database from the Docker Compose file
-TYPEORM_HOST=udapeopelprod.cbaldca6tokt.us-west-2.rds.amazonaws.com
+TYPEORM_HOST=udapeople.cb2i1asgpqw0.us-east-1.rds.amazonaws.com
 TYPEORM_PORT=5432
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=mypassword
