--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,7 @@ jobs:
           name: Front-end scan
           command: |
             cd frontend
-            npm 
+            npm i
             npm audit fix --audit-level=critical --force
   scan-backend:
     docker:
@@ -166,7 +166,7 @@ jobs:
           name: back-end scan
           command: |
             cd backend
-            npm 
+            npm i
             npm audit fix --audit-level=critical --force
 
   deploy-infra:
