--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -426,26 +426,12 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend:
-          filters:
-            branches:
-              only: master
-      - build-backend:
-          filters:
-            branches:
-              only: master
-      - test-frontend:
-          requires:
-            - build-frontend
-      - test-backend:
-          requires:
-            - build-backend
-      - scan-frontend:
-          requires:
-            - build-frontend
-      - scan-backend:
-          requires:
-            - build-backend
+      - build-frontend
+      - build-backend
+      - test-frontend
+      - test-backend
+      - scan-frontend
+      - scan-backend
       - deploy-infra:
           requires:
             - test-frontend
