--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -428,10 +428,18 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      - test-frontend
-      - test-backend
-      - scan-frontend
-      - scan-backend
+      - test-frontend:
+          requires:
+            - build-frontend
+      - test-backend:
+          requires:
+            - build-backend
+      - scan-frontend:
+          requires:
+            - build-frontend
+      - scan-backend:
+          requires:
+            - build-backend
       - deploy-infra:
           requires:
             - test-frontend
